--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_credit_card: ^4.0.0+1
