--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   device_preview: ^1.1.0
   dio: ^5.3.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_credit_card: ^4.0.0+1
   flutter_stripe: ^9.5.0+1
   flutter_svg: ^2.0.7
